cabal-version:       2.2

name:                hask-task
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andreamanfroi/hask-task#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              andreamanfroi
maintainer:          andrea.manfroi@
copyright:           none
category:            parsers, fun, magic-the-gathering
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable hask-task
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       scotty,
                       aeson,
                       text,
                       uuid,
                       stm,
                       containers,
                       http-types
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints